# Horus

./: .dockerignore  .gitignore  README.md  deploy.sh  docker-compose.yml  stop.sh
agents/: config.json  config.kali.json  main.py  pyproject.toml  setup_agent.sh  structure_logs.json
agents/modules/: __init__.py  active_response.py  comms.py  db.py  fim.py  log_reader.py  syscollector.py
assets/: Diagrama-ARQ-&-FD.excalidraw
dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json
dashboard/.next/dev/: build-manifest.json  prerender-manifest.json  trace
dashboard/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
dashboard/.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/dashboard/: data-table.tsx  header.tsx  severity-badge.tsx  sidebar.tsx  stats-card.tsx
dashboard/components/dashboard/pages/: endpoints-page.tsx  fim-page.tsx  login-page.tsx  overview-page.tsx  syscollector-page.tsx  (+2 more)
dashboard/lib/: api.ts
server/: Dockerfile  config.docker.yaml  config.yaml  main.py  requirements.txt
server/api/: __init__.py  auth.py  dashboard.py  enrollment.py  ingestion.py
server/data/: mitre_map.json
server/engine/: __init__.py  correlator.py  decoder.py  mitre.py  rules.py  worker.py
server/rules/: default_rules.yaml
server/services/: __init__.py  alert_store.py  cold_storage.py  vuln_manager.py
testing-mvp/: seed_demo_data.py  simulate_attack.py
(+94 files in other folders)
