[project]
name = "horus-agent"
version = "0.1.0"
description = "Horus SIEM/XDR Agent - File Integrity Monitoring and Log Collection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Horus Team"}
]
keywords = ["siem", "xdr", "security", "fim", "monitoring"]

dependencies = [
    "watchdog>=3.0.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
windows = [
    "pywin32>=306",
]

[project.scripts]
horus-agent = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=modules"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
